# baton-deploy

./: .gitignore  .travis.yml  Cargo.toml
src/: main.rs
src/baton/: lib.rs  message.rs  routing_key.rs
