[package]
name = "baton-deploy"
version = "0.1.0"
authors = ["Thom May <thom@may.lt>", "Paul Mucur <mudge@mudge.name>"]

[lib]
name = "baton"
path = "src/baton/lib.rs"

[[bin]]
name = "baton-deploy"
doc = false
test = false

[dependencies]
amqp = "0.0.16"
env_logger = "0.3"
serde = "0.8"
serde_json = "0.8"
serde_macros = "0.8"
hyper = "0.9"
sodiumoxide = "*"
rustc-serialize = "*"
